fixed text formating and size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -557,7 +557,7 @@ h6 {
 	margin: 0 0 10px 0;
 	margin-top: 170px;
 	margin-bottom: 20px;
-	font-size: 30px;
+	font-size: 33px;
 	font-weight: bold;
 	line-height: 45px;
 	letter-spacing: 3px;
@@ -735,7 +735,7 @@ section {
 
 .about-title {
 	font-family: "Mukta", sans-serif;
-	font-size: 30px;
+	font-size: 28px;
 	font-weight: bold;
 	margin-bottom: 25px;
 	margin-left: auto;
@@ -842,11 +842,11 @@ section {
 	width: 100%;
 	height: 100%;
 	margin: auto;
-	margin-bottom: 40px;
+	/* margin-bottom: 40px; */
 }
 
 .instagram-title-box {
-	margin-top: 35px;
+	margin-top: 70px;
 	margin-bottom: 15px;
 	margin-left: auto;
 	margin-right: auto;
@@ -2355,6 +2355,27 @@ section {
 	padding-left: 5px;
 	color: #dfd8d9;
 	font-size: 14px;
+}
+
+/*--------------------------------------------------------------
+# Construction
+--------------------------------------------------------------*/
+#bg {
+	position: fixed;
+	top: -50%;
+	left: -50%;
+	width: 200%;
+	height: 200%;
+}
+#bg img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	margin: auto;
+	min-width: 50%;
+	min-height: 50%;
 }
 
 /*--------------------------------------------------------------
