--- a/assets/css/construction.css
+++ b/assets/css/construction.css
@@ -27,7 +27,7 @@ a.class1 {
 	/* twitter, instagram, linkedin, spotify links at bottom */
 	display: inline-block;
 	color: #ffffff; /* before: 1973cc // beforebefore: #1563b1;*/
-	font-size: 40px;
+	font-size: 35px;
 	letter-spacing: 10px;
 	transform: scale(0.5);
 	transition: 0.5s;
@@ -672,7 +672,7 @@ h1 {
 h3 {
 	font-family: "Work Sans", sans-serif;
 	font-weight: 300;
-	font-size: 20px;
+	font-size: 17px;
 	line-height: 1.2;
 	margin-top: 30px;
 	text-align: center;
@@ -689,6 +689,7 @@ h3 {
 }
 
 .video-container {
+	/* background */
 	position: absolute;
 	top: 0;
 	left: 0;
