--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -776,7 +776,7 @@ section {
 }
 
 .about-link:hover {
-	color: #0f6bc7;
+	color: #1c87ebb6;
 }
 
 .about .content h3 {
@@ -846,15 +846,15 @@ section {
 }
 
 .instagram-title-box {
-	margin-top: 70px;
-	margin-bottom: 15px;
+	margin-top: 60px;
+	margin-bottom: 10px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
 .instagram-title {
 	font-family: "Mukta", sans-serif;
-	font-size: 25px;
+	font-size: 22px;
 	font-weight: bold;
 	letter-spacing: 2px;
 	color: #1c87eb;
@@ -863,7 +863,7 @@ section {
 }
 
 .instagram-title:hover {
-	color: #076dd3;
+	color: #1c87ebb6;
 }
 
 /* Three image containers (use 25% for four, and 50% for two, etc) */
@@ -895,7 +895,7 @@ section {
 	width: 33%;
 	height: 33.33%;
 	margin: auto;
-	margin-top: 23px;
+	margin-top: 18px;
 	float: center;
 }
 
@@ -903,7 +903,7 @@ section {
 	width: 33%;
 	height: 33.33%;
 	margin: auto;
-	margin-top: -208px;
+	margin-top: -238px;
 	float: right;
 }
 
