redesigned about me, instagram row of pics

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1190,13 +1190,13 @@ section {
 	left: 0%;
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 0.404);
+	background: #00000060;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	opacity: 0;
-	transition: 0.2s;
+	transition: 0.3s;
 }
 
 .portfolio .image_overlay > * {
@@ -1215,11 +1215,26 @@ section {
 .portfolio .image_title {
 	font-size: 25px;
 	font-family: "Work Sans", sans-serif;
+	text-align: center;
 	font-weight: lighter;
 	letter-spacing: 3px;
 	font-weight: 500;
 	color: #ffffff;
 	margin-top: 25px;
+}
+
+/* for about me, instagram pics hover text */
+.portfolio .image_title2 {
+	max-width: 50%;
+	max-height: 100%;
+	text-align: center;
+	font-size: 0.8rem;
+	font-family: "Work Sans", sans-serif;
+	font-weight: lighter;
+	letter-spacing: 3px;
+	font-weight: 500;
+	color: #ffffff;
+	/* margin-top: 80px; */
 }
 
 .portfolio .image_description {
