--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1251,6 +1251,7 @@ section {
 /* for about me, instagram pics hover text */
 .portfolio .image_title2 {
 	max-width: 50%;
+	min-width: 100%;
 	max-height: 100%;
 	text-align: center;
 	font-size: 0.8rem;
