completed hobbies section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -946,8 +946,21 @@ section {
 	float: right;
 }
 
+.books-titleNL {
+	width: 100%;
+	height: 100%;
+	font-family: "Mukta", sans-serif;
+	font-size: 21px;
+	font-weight: bold;
+	letter-spacing: 2px;
+	color: #1c87eb;
+	transition: 0.3s;
+
+	/* color: #1563b1; */
+}
+
 .books-title {
-	width: 15%;
+	width: 100%;
 	height: 100%;
 	font-family: "Mukta", sans-serif;
 	font-size: 21px;
