--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -978,7 +978,7 @@ section {
 
 .books-middle {
 	position: absolute;
-	font-size: 0.8rem;
+	font-size: 0.8vw;
 	font-family: "Work Sans", sans-serif;
 	font-weight: lighter;
 	letter-spacing: 3px;
@@ -992,6 +992,7 @@ section {
 	max-width: 50%;
 	min-width: 100%;
 	max-height: 30%;
+	margin-top: 5px;
 	text-align: left;
 	font-size: 0.7vw;
 	font-family: "Work Sans", sans-serif;
@@ -1002,7 +1003,7 @@ section {
 	color: #ffffff;
 	position: absolute;
 	top: 45%;
-	left: 60%;
+	left: 52%;
 	transform: translate(-50%, -50%);
 }
 
