--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1007,6 +1007,7 @@ section {
 	transform: translate(-50%, -50%);
 }
 
+/* DON'T MESS W THIS, it's for quotes on about me page*/
 .books-list2 {
 	max-width: 50%;
 	min-width: 90%;
@@ -1318,6 +1319,34 @@ section {
 }
 
 .portfolio .image_overlay:hover > * {
+	transform: translateY(0);
+}
+
+.portfolio .books_overlay {
+	position: absolute;
+	top: 0;
+	left: 0%;
+	width: 100%;
+	height: 100%;
+	background: #00000060;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	opacity: 0;
+	transition: 0.3s;
+}
+
+.portfolio .books_overlay > * {
+	/* 	transform: translateY(8px);
+	transition: transform 0.3s; */
+}
+
+.portfolio .books_overlay:hover {
+	opacity: 1;
+}
+
+.portfolio .books_overlay:hover > * {
 	transform: translateY(0);
 }
 
