--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1378,12 +1378,28 @@ section {
 	min-width: 100%;
 	max-height: 100%;
 	text-align: center;
-	font-size: 0.8rem;
+	font-size: 0.9rem;
 	font-family: "Work Sans", sans-serif;
 	font-weight: lighter;
 	letter-spacing: 3px;
 	font-weight: 500;
 	color: #ffffff;
+	text-shadow: 0px 0px 5px #000000;
+	/* margin-top: 80px; */
+}
+
+/* for about me, hobbies pics hover text */
+.portfolio .image_title3 {
+	max-width: 50%;
+	min-width: 100%;
+	max-height: 100%;
+	text-align: center;
+	font-size: 1.5rem;
+	font-family: "Work Sans", sans-serif;
+	font-weight: lighter;
+	letter-spacing: 3px;
+	font-weight: 500;
+	text-shadow: 0px 0px 5px #000000;
 	/* margin-top: 80px; */
 }
 
