added multilingual header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -594,9 +594,22 @@ h6 {
 	margin: 0px; /* stretches the box as px goes up */
 	box-sizing: border-box;
 	font-family: "Mukta", sans-serif;
-	font-size: 33px;
+	font-size: 2.5vw;
 	font-weight: bold;
-	line-height: 70px;
+	line-height: 50px;
+	letter-spacing: 3px;
+	text-transform: none;
+	color: #177add;
+}
+#hero .rotate-text2 {
+	width: 100%;
+	padding: 0; /* space between each word*/
+	margin: 0px; /* stretches the box as px goes up */
+	box-sizing: border-box;
+	font-family: "Mukta", sans-serif;
+	font-size: 2.5vw;
+	font-weight: bold;
+	line-height: 50px;
 	letter-spacing: 3px;
 	text-transform: none;
 	color: #177add;
@@ -622,33 +635,66 @@ span {
 	height: 100%;
 	padding-left: 10px;
 	color: #0e6ffc;
-	animation: spin_words 10s infinite;
+	animation: spin_words 15s infinite;
 }
 
 @keyframes spin_words {
 	10% {
 		transform: translateY(-112%);
 	}
-	25% {
+	15% {
 		transform: translateY(-100%);
 	}
-	35% {
+	20% {
 		transform: translateY(-212%);
 	}
-	50% {
+	25% {
 		transform: translateY(-200%);
 	}
-	60% {
+	30% {
 		transform: translateY(-312%);
 	}
-	75% {
+	35% {
 		transform: translateY(-300%);
 	}
-	85% {
+	40% {
 		transform: translateY(-412%);
 	}
-	100% {
+	45% {
 		transform: translateY(-400%);
+	}
+	50% {
+		transform: translateY(-512%);
+	}
+	55% {
+		transform: translateY(-500%);
+	}
+	60% {
+		transform: translateY(-612%);
+	}
+	65% {
+		transform: translateY(-600%);
+	}
+	70% {
+		transform: translateY(-712%);
+	}
+	75% {
+		transform: translateY(-700%);
+	}
+	80% {
+		transform: translateY(-812%);
+	}
+	85% {
+		transform: translateY(-800%);
+	}
+	90% {
+		transform: translateY(-912%);
+	}
+	95% {
+		transform: translateY(-900%);
+	}
+	100% {
+		transform: translateY(0%);
 	}
 }
 
