--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -574,8 +574,9 @@ h6 {
 	line-height: 35px;
 	margin: 150px 0 10px 0;
 	margin-bottom: 25px;
-	font-size: 17px;
+	font-size: 1em; /*17px*/
 	font-weight: lighter;
+	box-sizing: border-box;
 }
 
 #hero h3 {
@@ -589,12 +590,12 @@ h6 {
 
 /* ROTATE */
 #hero .rotate-text {
-	width: 100%;
+	min-width: 500px;
 	padding: 0; /* space between each word*/
 	margin: 0px; /* stretches the box as px goes up */
 	box-sizing: border-box;
 	font-family: "Mukta", sans-serif;
-	font-size: 30px; /* 30px; 2.5vw; */
+	font-size: 2.3vw; /* 30px; 2.5vw; */
 	font-weight: bold;
 	line-height: 50px;
 	letter-spacing: 3px;
