--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -572,7 +572,7 @@ h6 {
 	font-family: "Work Sans", serif; /* home page description font */
 	color: rgb(119, 119, 119);
 	line-height: 35px;
-	margin: 150px 0 10px 0;
+	margin: 135px 0 10px 0;
 	margin-bottom: 25px;
 	font-size: 1em; /*17px*/
 	font-weight: lighter;
@@ -595,7 +595,7 @@ h6 {
 	margin: 0px; /* stretches the box as px goes up */
 	box-sizing: border-box;
 	font-family: "Mukta", sans-serif;
-	font-size: 2.3vw; /* 30px; 2.5vw; */
+	font-size: max(1.5em, 12px); /* 30px; 2.5vw; */
 	font-weight: bold;
 	line-height: 50px;
 	letter-spacing: 3px;
