updated about me

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -596,7 +596,7 @@ h6 {
 	box-sizing: border-box;
 	/* font-family: "Mukta", sans-serif; */
 	font-family: 'Amiko', sans-serif;
-	font-size: max(1.7em, 12px); /* 30px; 2.5vw; */
+	font-size: max(1.5em, 12px); /* 30px; 2.5vw; */
 	font-weight: bold;
 	line-height: 50px;
 	letter-spacing: 1px;
@@ -990,7 +990,7 @@ section {
 	margin-bottom: 35px;
 	/* font-family: "Mukta", sans-serif; */
 	font-family: 'Amiko', sans-serif;
-	font-size: 30px;
+	font-size: 1.5em;
 	font-weight: bold;
 	letter-spacing: 0px;
 	width: 80%;
