--- a/assets/css/construction.css
+++ b/assets/css/construction.css
@@ -27,8 +27,8 @@ a.class1 {
 	/* twitter, instagram, linkedin, spotify links at bottom */
 	display: inline-block;
 	color: #ffffff; /* before: 1973cc // beforebefore: #1563b1;*/
-	font-size: 45px;
-	letter-spacing: 10px;
+	font-size: 42px;
+	letter-spacing: 25px;
 	transform: scale(0.5);
 	transition: 0.5s;
 	margin-top: 20px;
@@ -258,14 +258,14 @@ h6 {
 	align-items: center;
 	justify-content: space-between;
 	/* Home, Work, About links */
-	font-family: "Work Sans", sans-serif;
+	font-family: "Amiko", sans-serif;
 	color: #ffffff;
 	font-size: 14px;
 	padding: 0 4px;
 	padding-top: 10px;
 	white-space: nowrap;
 	transition: 0.5s;
-	letter-spacing: 0.4px;
+	letter-spacing: 0px;
 	position: relative;
 	transform: scale(1);
 }
@@ -660,10 +660,10 @@ a {
 }
 
 h1 {
-	font-family: "Work Sans", sans-serif;
-	font-weight: 600;
-	font-size: 60px;
-	letter-spacing: 10px;
+	font-family: "Amiko", sans-serif;
+	font-weight: 900;
+	font-size: 45px;
+	letter-spacing:7px;
 	line-height: 1.2;
 	margin-top: 20px;
 	margin-bottom: 20px;
@@ -673,8 +673,8 @@ h1 {
 h3 {
 	font-family: "Work Sans", sans-serif;
 	font-weight: 300;
-	font-size: 20px;
-	letter-spacing: 5px;
+	font-size: 15px;
+	letter-spacing: 3px;
 	line-height: 1.2;
 	margin-top: 35px;
 	text-align: center;
