--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1589,11 +1589,11 @@ section {
 
 .portfolio .image_title {
 	font-size: 25px;
-	font-family: "Work Sans", sans-serif;
+	font-family: "Amiko", sans-serif;
 	text-align: center;
 	font-weight: lighter;
-	letter-spacing: 3px;
-	font-weight: 500;
+	letter-spacing: 1px;
+	font-weight: 600;
 	color: #ffffff;
 	margin-top: 25px;
 }
