--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -991,10 +991,10 @@ section {
 	margin-top: 10px;
 	margin-bottom: 35px;
 	/* font-family: "Mukta", sans-serif; */
-	font-family: "Amiko", sans-serif;
-	font-size: 1.5em;
+	font-family: "Mukta", sans-serif;
+	font-size: 1.7em;
 	font-weight: bold;
-	letter-spacing: 0px;
+	letter-spacing: 2px;
 	width: 80%;
 	color: #177add;
 }
