--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1537,7 +1537,7 @@ section {
 	left: 0%;
 	width: 100%;
 	height: 100%;
-	background: #00000060;
+	background: #00000088; /* portfolio img hover */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -1588,7 +1588,7 @@ section {
 }
 
 .portfolio .image_title {
-	font-size: 25px;
+	font-size: 1.5em;
 	font-family: "Amiko", sans-serif;
 	text-align: center;
 	font-weight: lighter;
@@ -1641,7 +1641,9 @@ section {
 }
 
 .portfolio .image_description {
-	font-size: 16px;
+	font-size: 0.8em;
+	text-align: center;
+	max-width:70%;
 	font-family: "Work Sans", sans-serif;
 	color: #ffffffb2;
 	margin-top: 5px;
