updated portfolio descripts

--- a/assets/css/construction.css
+++ b/assets/css/construction.css
@@ -673,7 +673,7 @@ h1 {
 h3 {
 	font-family: "Work Sans", sans-serif;
 	font-weight: 300;
-	font-size: 15px;
+	font-size: 1.3em;
 	letter-spacing: 3px;
 	line-height: 1.2;
 	margin-top: 35px;
